# tech-playground

./: .gitignore  README.md
100-pandas-problems/: 100-pandas-puzzles.ipynb  (+1 more)
artificial_intelligence/: .gitignore  pyproject.toml
artificial_intelligence/10_genetic_algorithm/: main.ipynb
artificial_intelligence/11_keras/: LinProg.py  kerasPrimer.py  kerasPrimerNelin.py  number_recognition.py
artificial_intelligence/1_chatbot_agent/adapters/infrastructure/: answer_repository.py
artificial_intelligence/1_chatbot_agent/core/application/: ports.py  use_cases.py
artificial_intelligence/1_chatbot_agent/core/domain/: services.py
artificial_intelligence/2_carpet_cleaner/: main.py
artificial_intelligence/4_sliding_puzzle/: README.md  benchmark.py  examples.py  sliding_puzzle_solver.py  test_sliding_puzzle.py
artificial_intelligence/5_wumpus_world/: main.py
artificial_intelligence/6_gradient_descent/static/css/: style.css
artificial_intelligence/6_gradient_descent/templates/: index.html
artificial_intelligence/6_linear_regression/: main.ipynb
artificial_intelligence/7_gradient_descent/: README.md  app.py
artificial_intelligence/7_gradient_descent/static/js/: main.js
artificial_intelligence/8_perceptron/: main.ipynb
artificial_intelligence/9_simulated_annealing/: main.ipynb
artificial_intelligence/bishops_chess/: main.py  Расстановка_слонов_домашняя_работа.docx
artificial_intelligence/chatbot_agent/: main.py
artificial_intelligence/chatbot_agent/adapters/interface/: cli_controller.py
artificial_intelligence/chatbot_agent/core/domain/: entities.py
(+292 files in other folders)
